# HashtagsV2

./: .gitignore  DOCUMENTATION.md  Military_Features_Report.md  README.md  User_Guide.md  admin_guide.md  download_tiles.py  launch_hashtag.bat  reference.md  start_hashtag.bat  suggestions.md  test_apis.py  test_raw.py  test_tcpserversink.py
ESP_P4_Streaming Code/OV_Hash_v1-main/: sdkconfig.defaults  sdkconfig.defaults.esp32p4
ESP_P4_Streaming Code/OV_Hash_v1-main/main/: CMakeLists.txt  app_main.c  app_main.cpp  camera_pipeline.c  eth_init.c  eth_init.h  hgic_lwip.c  hgic_lwip.h  http_server.c  http_server.h  idf_component.yml  uvc_streaming.c  uvc_streaming.h
frontend/: fix_lucide.py  index.html  package-lock.json  package.json  vite.config.js
frontend/Frontend/src/: App.jsx  config.js
frontend/src/: App.jsx  index.css  main.jsx
kaggle/: Combined_Kaggle.yaml  create_clean_zip.py  kaggle_train.py
src/: api_server.py  augmentation_pipeline.py  cleanup_clips.py  dataset_manager.py  detection_engine.py  download_advanced_datasets.py  download_sample_data.py  gait_analyzer.py  hashtag_v2_backend.py  node_configs.json  nodes.json  ov5647_simulator.py  requirements.txt  run_backend.bat  run_training_jobs.bat  run_validation_clips.py  simulate_test.py  test_ack_cycle.py  test_jobs.py  threat_classifier.py  train.py  train_pipeline.py  validate_ov5647.py  verify_custom.py  zoom_pan_validation.py
src/backgrounds/: HASH-3_edges.npy  HASH-3_frame.npy  HASH-4_edges.npy  HASH-4_frame.npy  HASH-5_edges.npy  HASH-5_frame.npy
src/configs/: camera_profiles.yaml
(+24 files in other folders)
